# kindr

./: CMakeLists.txt
cmake/: kindr-config.cmake.in
